--- a/FixedAsset_MVC/packages.config
+++ b/FixedAsset_MVC/packages.config
@@ -1,9 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngularJS.Core" version="1.7.2" targetFramework="net452" />
+  <package id="AngularJS.Route" version="1.7.2" targetFramework="net452" />
+  <package id="DnsClient" version="1.0.7" targetFramework="net452" />
+  <package id="jQuery" version="3.3.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="MongoDB.Bson" version="2.7.0" targetFramework="net452" />
+  <package id="MongoDB.Driver" version="2.7.0" targetFramework="net452" />
+  <package id="MongoDB.Driver.Core" version="2.7.0" targetFramework="net452" />
+  <package id="System.Buffers" version="4.3.0" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net452" />
 </packages>
