--- a/FixedAsset_MVC/packages.config
+++ b/FixedAsset_MVC/packages.config
@@ -2,14 +2,16 @@
 <packages>
   <package id="AngularJS.Core" version="1.7.2" targetFramework="net452" />
   <package id="AngularJS.Route" version="1.7.2" targetFramework="net452" />
+  <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="DnsClient" version="1.0.7" targetFramework="net452" />
-  <package id="jQuery" version="3.3.1" targetFramework="net452" />
+  <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="MongoDB.Bson" version="2.7.0" targetFramework="net452" />
   <package id="MongoDB.Driver" version="2.7.0" targetFramework="net452" />
   <package id="MongoDB.Driver.Core" version="2.7.0" targetFramework="net452" />
