--- a/FixedAsset_MVC/FixedAsset_MVC.csproj
+++ b/FixedAsset_MVC/FixedAsset_MVC.csproj
@@ -118,6 +118,9 @@
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Index.html" />
+    <Content Include="Pages\Login.html" />
+    <Content Include="Pages\Next.html" />
     <Content Include="ScriptsNg\Controllers\LoginController.js" />
     <Content Include="Scripts\angular-mocks.js" />
     <Content Include="Scripts\angular-route.js" />
