--- a/FixedAsset_MVC/Web.config
+++ b/FixedAsset_MVC/Web.config
@@ -14,8 +14,28 @@
       <compilation debug="true" targetFramework="4.5.2" />
       <httpRuntime targetFramework="4.5.2" />
     </system.web>
+  
   <system.webServer>
-    
+    <!--<rewrite>
+      <rules>
+        <rule name="Imported Rule 1" stopProcessing="true">
+          <match url="^Index\.html" ignoreCase="false"/>
+          <action type="None"/>
+        </rule>
+        <rule name="Imported Rule 1_1" stopProcessing="true">
+          <match url="^Home\.html" ignoreCase="false"/>
+          <action type="None"/>
+        </rule>
+        <rule name="Imported Rule 2" stopProcessing="true">
+          <match url="." ignoreCase="false"/>
+          <conditions>
+            <add input="{REQUESt_FILENAME}" matchType="IsFile" ignoreCase="false" negate="true"/>
+            <add input="{REQUESt_FILENAME}" matchType="IsDirectory" ignoreCase="false" negate="true"/>
+          </conditions>
+          <action type="Rewrite" url="/Home.html"/>
+        </rule>
+      </rules>
+    </rewrite>-->
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
