--- a/FixedAsset_MVC/Web.config
+++ b/FixedAsset_MVC/Web.config
@@ -18,21 +18,37 @@
   <system.webServer>
     <!--<rewrite>
       <rules>
-        <rule name="Imported Rule 1" stopProcessing="true">
+        <rule name="Imported Rule 1_1" stopProcessing="true">
           <match url="^Index\.html" ignoreCase="false"/>
           <action type="None"/>
         </rule>
-        <rule name="Imported Rule 1_1" stopProcessing="true">
+        <rule name="Imported Rule 1_2" stopProcessing="true">
+          <match url="^Index\.html*" ignoreCase="false"/>
+          <conditions>
+            <add input="{REQUESt_FILENAME}" matchType="IsFile" ignoreCase="false" negate="true"/>
+            <add input="{REQUESt_FILENAME}" matchType="IsDirectory" ignoreCase="false" negate="true"/>
+          </conditions>
+          <action type="Rewrite" url="/Index.html"/>
+        </rule>
+        <rule name="Imported Rule 2_1" stopProcessing="true">
           <match url="^Home\.html" ignoreCase="false"/>
           <action type="None"/>
         </rule>
-        <rule name="Imported Rule 2" stopProcessing="true">
-          <match url="." ignoreCase="false"/>
+        <rule name="Imported Rule 2_2" stopProcessing="true">
+          <match url="^Home\.html*" ignoreCase="false"/>
           <conditions>
             <add input="{REQUESt_FILENAME}" matchType="IsFile" ignoreCase="false" negate="true"/>
             <add input="{REQUESt_FILENAME}" matchType="IsDirectory" ignoreCase="false" negate="true"/>
           </conditions>
           <action type="Rewrite" url="/Home.html"/>
+        </rule>
+        <rule name="Imported Rule 3_1" stopProcessing="true">
+          <match url=".*" ignoreCase="false"/>
+          <conditions>
+            <add input="{REQUESt_FILENAME}" matchType="IsFile" ignoreCase="false" negate="true"/>
+            <add input="{REQUESt_FILENAME}" matchType="IsDirectory" ignoreCase="false" negate="true"/>
+          </conditions>
+          <action type="None"/>
         </rule>
       </rules>
     </rewrite>-->
